fix: Product Collection: Featured Products 5 Columns improve spacing (https://github.com/woocommerce/woocommerce-blocks/pull/12041)

--- a/plugins/woocommerce-blocks/assets/js/blocks/product-template/style.scss
+++ b/plugins/woocommerce-blocks/assets/js/blocks/product-template/style.scss
@@ -66,7 +66,7 @@ $min-product-width: 150px;
 /**
  * Default spacing between product elements
  */
-:where(.wc-block-product-template .wc-block-product) > * {
+:where(.wc-block-product-template .wc-block-product) > *:not(:last-child) {
 	margin-bottom: 0.75rem;
 	margin-top: 0;
 }
